--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col">
-                            <a href="./index.html"><img src="./css/img/Icono Menú inicio.png" style="width: 5vh;"></a>
+                            <a href="./index.html"><img src="./css/img/Icono Meninicio.png" style="width: 5vh;"></a>
                         </div>
                         <div class="col">
-                            <a href="#aboutus"><img src="./css/img/Menú Quienes somos.png"  style="padding-top: 1vh;"></a>
+                            <a href="#aboutus"><img src="./css/img/MenQuienes somos.png"  style="padding-top: 1vh;"></a>
                         </div>
                         <div class="col">
-                            <a href="#directpanel"><img src="./css/img/Menú Directos.png" style="padding-top: 1vh;"></a>
+                            <a href="#directpanel"><img src="./css/img/MenDirectos.png" style="padding-top: 1vh;"></a>
                         </div>
                         <div class="col">
-                            <a href="#streamers"><img src="./css/img/Menú Streamers.png" style="padding-top: 1vh;"></a>
+                            <a href="#streamers"><img src="./css/img/MenStreamers.png" style="padding-top: 1vh;"></a>
                         </div>
                         <div class="col">
-                            <a href="#casters"><img src="./css/img/Menú Casters.png" style="padding-top: 1vh;"></a>
+                            <a href="#casters"><img src="./css/img/MenCasters.png" style="padding-top: 1vh;"></a>
                         </div>
                     </div>
                 </div>
