--- a/index.html
+++ b/index.html
@@ -1,79 +1,80 @@
 <!DOCTYPE html>
-<html>
-
 <head>
-    <title>W2A</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-
 <body>
-    <div class="barramenu bg-image container-fluid">
-        <div class="row">
-            <div class="col">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col">
-                            <a href="./index.html"><img src="./css/img/Icono Meninicio.png" style="width: 5vh;"></a>
-                        </div>
-                        <div class="col">
-                            <a href="#aboutus"><img src="./css/img/MenQuienes somos.png"  style="padding-top: 1vh;"></a>
-                        </div>
-                        <div class="col">
-                            <a href="#directpanel"><img src="./css/img/MenDirectos.png" style="padding-top: 1vh;"></a>
-                        </div>
-                        <div class="col">
-                            <a href="#streamers"><img src="./css/img/MenStreamers.png" style="padding-top: 1vh;"></a>
-                        </div>
-                        <div class="col">
-                            <a href="#casters"><img src="./css/img/MenCasters.png" style="padding-top: 1vh;"></a>
-                        </div>
-                    </div>
-                </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    
+    <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
+        <div class="container-fluid">
+
+            <div class = "logo_header">
+                <img src="img/Icono Meninicio.png"  href="#" class="img-fluid" alt="Responsive image">
             </div>
-            <div class="col">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col">
-                            <a href="https://twitter.com/W2Avalanche"><img src="./css/img/Twitter.png" style="padding-top: 1vh; padding-left: 5vh;"></a>
-                        </div>
-                        <div class="col">
-                            <a href="https://www.instagram.com/"><img src="./css/img/Instagram.png" style="padding-top: 1vh; padding-left: 5vh;"></a>
-                        </div>
-                        <div class="col">
-                            <a href="https://www.youtube.com/"><img src="./css/img/Youtube.png" style="padding-top: 1vh; padding-left: 5vh;"></a>
-                        </div>
-                        <div class="col">
-                            <a href="https://www.tiktok.com/es/"><img src="./css/img/TikTok.png" style="padding-top: 1vh; padding-left: 5vh;"></a>
-                        </div>
-                        <div class="col">
-                            <a href="https://www.twitch.tv/w2atv"><img src="./css/img/Twitch.png" style="padding-top: 1vh; padding-left: 5vh;"></a>
-                        </div>
-                    </div>
-                </div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <a  class="nav-item  nav-button"href="">
+                        <img src="img/MenQuienes somos.png"  class="img-fluid" alt="Responsive image">
+                    </li>
+                    <a class="nav-item  nav-button" href="" >
+                        <img src="img/MenDirectos.png" class="img-fluid" alt="Responsive image">
+                    </a>
+                    <a  class="nav-item  nav-button" href="">
+                        <img src="img/MenCasters.png" class="img-fluid" alt="Responsive image">
+                    </a >
+                    <a  class="nav-item  nav-button" href="">
+                        <img src="img/MenStreamers.png" class="img-fluid" alt="Responsive image">
+                    </a >
+                </ul>
+                    
+                <ul class="navbar-nav ml-auto flex-row">
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://twitter.com/W2Avalanche">
+                            <img src="img/Twitter.png" class="img-fluid" alt="Twitter">
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.twitch.tv/w2atv">
+                            <img src="img/Twitch.png" class="img-fluid" alt="Twitch">
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <img src="img/TikTok.png" class="img-fluid" alt="TikTok">
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <img src="img/Youtube.png" class="img-fluid" alt="YouTube">
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://latidoshop.com/categoria-producto/w2a/?v=028a54c4d521">
+                            <img src="img/Tienda.png" class="img-fluid" alt="Tienda">
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
-    </div>
-    <div id="fondow2a" class="">
-        <div class="bg-image fondow2a">
-            <div class="d-flex justify-content-center">
-                <div class="small-box mx-auto">
-                        <a href="#joinus"><img src="./css/img/Boton_unete.png" style="padding-top: 50vh;"></a>
-                </div>
+      </nav>
+    <div class="bg-image background">
+        <div class="d-flex justify-content-center">
+            <div class="small-box mx-auto">
+                    <a href="#joinus"><img src="./img/Boton_unete.png" class="img-fluid" style="padding-top: 50vh;"></a>
             </div>
-            <div class="d-flex justify-content-center">
-                <div class="small-box mx-auto">
-                        <a href="#twitch"><img src="./css/img/exampleVideo.jpg" style="padding-top: 5vh; height: 40vh;"></a>
-                </div>
+        </div>
+        <div class="d-flex justify-content-center">
+            <div class="small-box mx-auto">
+                    <a href="#twitch"><img src="./img/exampleVideo.jpg"  class="img-fluid" style="padding-top: 5vh; height: 40vh;"></a>
             </div>
         </div>
     </div>
 </body>
-<footer class="footer">© Copyright W2A.com. Todos los derechos reservados</footer>
-
-</html>
