favicon and meta properties

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <meta property="og:title" content="W2Avalanche">
     <meta property="og:description" content="Pensamos diferente, somos diferente">
-    <meta property="og:image" content="https://www.w2avalanche.com/img/logo.png">
+    <meta property="og:image" content="https://www.w2avalanche.com/img/logo.jpg">
     <meta property="og:url" content="https://w2avalanche.com/" /> 
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
