Restructure image forlder + responsive features

--- a/index.html
+++ b/index.html
@@ -17,56 +17,56 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     
-    <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light  fixed-top">
         <div class="container-fluid">
 
             <div class = "logo_header">
-                <img src="img/Icono Meninicio.png"  href="#" class="img-fluid" alt="Responsive image">
+                <img src="img/logo/black-transparent.png"  href="#" class="img-fluid" alt="Responsive image">
             </div>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="min-height: 5vh; width: 7vh;">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <a  class="nav-item  nav-button"href="">
-                        <img src="img/MenQuienes somos.png"  class="img-fluid" alt="Responsive image">
+                        <img src="img/nav-buttons/who_btn.png"  class="img-fluid" alt="Responsive image">
                     </li>
                     <a class="nav-item  nav-button" href="" >
-                        <img src="img/MenDirectos.png" class="img-fluid" alt="Responsive image">
+                        <img src="img/nav-buttons/stream_btn.png" class="img-fluid" alt="Responsive image">
                     </a>
                     <a  class="nav-item  nav-button" href="">
-                        <img src="img/MenCasters.png" class="img-fluid" alt="Responsive image">
+                        <img src="img/nav-buttons/casters_btn.png" class="img-fluid" alt="Responsive image">
                     </a >
                     <a  class="nav-item  nav-button" href="">
-                        <img src="img/MenStreamers.png" class="img-fluid" alt="Responsive image">
+                        <img src="img/nav-buttons/streamer_btn.png" class="img-fluid" alt="Responsive image">
                     </a >
                 </ul>
                     
                 <ul class="navbar-nav ml-auto flex-row">
                     <li class="nav-item">
                         <a class="nav-link" href="https://twitter.com/W2Avalanche">
-                            <img src="img/Twitter.png" class="img-fluid" alt="Twitter">
+                            <img src="img/socialmedia/Twitter.png" class="img-fluid" alt="Twitter">
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://www.twitch.tv/w2atv">
-                            <img src="img/Twitch.png" class="img-fluid" alt="Twitch">
+                            <img src="img/socialmedia/Twitch.png" class="img-fluid" alt="Twitch">
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">
-                            <img src="img/TikTok.png" class="img-fluid" alt="TikTok">
+                            <img src="img/socialmedia/TikTok.png" class="img-fluid" alt="TikTok">
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">
-                            <img src="img/Youtube.png" class="img-fluid" alt="YouTube">
+                            <img src="img/socialmedia/Youtube.png" class="img-fluid" alt="YouTube">
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://latidoshop.com/categoria-producto/w2a/?v=028a54c4d521">
-                            <img src="img/Tienda.png" class="img-fluid" alt="Tienda">
+                            <img src="img/socialmedia/Shop.png" class="img-fluid" alt="Tienda">
                         </a>
                     </li>
                 </ul>
@@ -76,12 +76,15 @@
     <div class="bg-image background">
         <div class="d-flex justify-content-center">
             <div class="small-box mx-auto">
-                    <a href="#joinus"><img src="./img/Boton_unete.png" class="img-fluid" style="padding-top: 50vh;"></a>
+                    <a href="#joinus"><img src="./img/home/text.png" class="img-fluid" style="padding-top: 15vh; max-width: 75vw;"></a>
             </div>
         </div>
         <div class="d-flex justify-content-center">
+                    <a href="#joinus"><img src="./img/home/join_btn.png" class="img-fluid" style="margin-top: 5vh; max-width: 75vw;"></a>
+        </div>
+        <div class="d-flex justify-content-center">
             <div class="small-box mx-auto">
-                    <a href="#twitch"><img src="./img/exampleVideo.jpg"  class="img-fluid" style="padding-top: 5vh; height: 40vh;"></a>
+                    <a href="#twitch"><img src="./img/exampleVideo.jpg"  class="img-fluid" style="padding-top: 5vh; max-height: 40vh; max-width: 90vw;"></a>
             </div>
         </div>
     </div>
