--- a/index.html
+++ b/index.html
@@ -88,4 +88,14 @@
             </div>
         </div>
     </div>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light  fixed-bottom " style="max-width: 3vh; min-width: 100vw;">
+        
+            <div class="container text-center">
+                <span class="text-muted">© 2023, W2Avalanche </span>
+                <span class="text-muted"><a href="mailto:w2a@w2avalanche.com">Contact</a> </span>
+                
+
+            </div>
+    </nav>
 </body>
